[package]
name = "processig"
version = "0.0.0"
authors = ["YL <yuan6liu@gmail.com>"]
description = "digital signal processing tools"
repository = "https://github.com/clearlycloudy/processig/"
keywords = [ "dsp", "signals" ]
license = "MIT"
documentation = "https://docs.rs/processig/0.0.0/core/"
readme = "README.md"
exclude = []

[lib]
name = "core"
path = "core/lib.rs"

[dependencies]
rand = "0.3"
num = "0.1.40"
log = "0.4.1"
pretty_env_logger = "0.2.0"
zpatial = "0.0.0"
mazth = "^0.2.1"
chrono = "0.4.0"
nom = "^3.2"