[package]
name = "processig"
version = "0.0.2"
authors = ["YL <yuan6liu@gmail.com>"]
description = "digital signal processing tools"
repository = "https://github.com/clearlycloudy/processig/"
keywords = [ "dsp", "signals" ]
license = "MIT"
documentation = "https://docs.rs/processig/0.0.2/src/"
readme = "README.md"
exclude = []

[lib]
name = "processig"
path = "src/mod.rs"

# [[bin]]
# name = "usage"
# path = "examples/usage/main.rs"

[dependencies]
rand = "0.3"
num = "0.2"
log = "0.4.1"
pretty_env_logger = "0.2.0"
zpatial = "0.0.0"
mazth = "^0.2.1"
chrono = "0.4.0"
nom = "^3.2"
ndarray = "0.12"
image = "0.20"